<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/preview_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:textAlignment="viewStart"
    android:textDirection="ltr"
    android:visibility="visible">

    <ImageView
        android:id="@+id/thumbnail"
        style="@style/AppTheme"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/gray_circle"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name"
        app:srcCompat="@drawable/shape_circle" />

    <ImageView
        android:id="@+id/delete_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/click_this_to_delete_the_record"
        android:forceHasOverlappingRendering="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/thumbnail"
        app:layout_constraintEnd_toEndOf="@+id/thumbnail"
        app:layout_constraintStart_toStartOf="@+id/thumbnail"
        app:layout_constraintTop_toTopOf="@+id/thumbnail"
        app:srcCompat="@drawable/ic_delete_24px" />

    <TextView
        android:id="@+id/name"
        style="@style/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:text="@string/john_smith"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintStart_toEndOf="@+id/thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_address"
        style="@style/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/john_smith_gmail_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/initial"
        style="@style/initial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t"
        app:layout_constraintBottom_toBottomOf="@+id/thumbnail"
        app:layout_constraintEnd_toEndOf="@+id/thumbnail"
        app:layout_constraintStart_toStartOf="@+id/thumbnail"
        app:layout_constraintTop_toTopOf="@+id/thumbnail" />

    <TextView
        android:id="@+id/date"
        style="@style/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_30_apr_2022"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="@+id/name" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/email_content"
        app:layout_constraintStart_toStartOf="@+id/email_content" />

    <TextView
        android:id="@+id/email_content"
        style="@style/content"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lorem_ipsum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/email_address"
        app:layout_constraintTop_toBottomOf="@+id/email_address" />

</androidx.constraintlayout.widget.ConstraintLayout>
